# advent-of-code

./: .ghci  .gitignore  LICENSE  Makefile  README.md  advent-of-code.cabal  clean  default.nix  flake.nix  hie.yaml  prepare  stack.yaml
2015/: 01.clj  02.clj  03.clj  04.clj  05.clj  06.clj  07.clj  08.hs  09.hs  10.c  11.hs  12.hs  13.hs  14.c  15.hs  16.hs  17.hs  18.c  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
2016/: 01.clj  02.clj  03.clj  04.clj  05.clj  06.clj  07.clj  08.clj  09.clj  10.clj  11.clj  12.clj  13.clj  14.clj  15.clj  16.clj  17.clj  18.clj  19.clj  20.clj  21.clj  22.clj  23.clj  24.clj  25.clj
2017/: 01.c  01.hs  02.c  02.hs  03.c  03.hs  04.hs  04.ml  05.c  06.ml  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.c  15.hs  16.hs  16.txt  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
2018/: 01.hs  02.hs  03.hs  04.hs  06.hs  07.hs  07.txt  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  14.txt  15.hs  16.hs  17.hs  18.hs  19.clj  20.hs  20.txt  21.clj  22.clj  22.txt  23.clj  24.clj  25.hs  3.hs  5.hs  6.hs  7.hs
2019/: 01.c  01.hs  01.scm  02.c  02.hs  02.scm  03.hs  03.scm  04.hs  04.scm  04.txt  05.hs  05.scm  06.hs  06.scm  07.hs  07.scm  08.hs  08.scm  09.hs  09.scm  10.hs  10.scm  11.hs  11.scm  12.hs  12.scm  13.hs  13.scm  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  (+1 more)
2020/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  21.txt  22.hs  23.hs  23.txt  24.hs  25.hs
2021/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  14.txt  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  22.txt  23.hs  23.txt  24.hs  24.nix  24.py  25.hs
2022/: 01.hs  02.hs  02.txt  03.hs  04.hs  05.hs  06.hs  07.go  07.hs  08.hs  09.cpp  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  21.txt  22.hs  23.hs  24.hs  25.hs
2023/: 01.hs  02.hs  03.hs  04.hs  04.txt  05.hs  06.hs  07.hs  08.hs  08.txt  09.hs  09.txt  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
2024/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
2025/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs
inputs/2018/: 04.txt  14.txt  19.txt  24.txt
inputs/2019/: 01.txt  15.txt  20.txt  22.txt
inputs/2020/: 15.txt  19.txt
inputs/2022/: 04.txt  10.txt  18.txt  22.txt
inputs/2023/: 03.txt  11.txt  12.txt  14.txt  15.txt  16.txt  23.txt  25.txt
inputs/2024/: 03.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  13.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt
inputs/2025/: 02.txt  03.txt  04.txt  05.txt  07.txt  08.txt  09.txt  11.txt  12.txt
lib/AdventOfCode/Y2017/: KnotHash.hs  P01.hs  P02.hs  P03.hs  P04.hs  P07.hs  P08.hs  P09.hs  P10.hs  P11.hs  P12.hs  P13.hs  P14.hs  P15.hs  P16.hs  P17.hs  P18.hs  P19.hs  P20.hs  P21.hs  P22.hs  P23.hs  P24.hs  P25.hs
lib/clj/advent_of_code/: assembunny.clj  dijkstra.clj  elf_code.clj  grid.clj  list.clj  md5.clj
lib/hs/AdventOfCode/: AStar.hs  Bfs.hs  BinarySearch.hs  BranchAndBound.hs  Dijkstra.hs  Grid.hs  Hex.hs  IntCode.hs  KnotHash.hs  Loop.hs  Main.hs  Modulo.hs  NanoParser.hs  NanoTest.hs  Parsing.hs  PriorityQueue.hs  Queue.hs  Ranges.hs  Stream.hs  V2.hs  V3.hs  Z3.hs
lib/hs/AdventOfCode/Grid/: Bounded.hs  Dijkstra.hs
lib/hs/AdventOfCode/V2/: Box.hs  Line.hs
lib/hs/Control/Monad/: Extended.hs  Extra.hs
lib/hs/Data/Foldable/: Extra.hs
lib/hs/Data/Functor/: Fix.hs
lib/hs/Data/List/: Extended.hs  Extra.hs
lib/hs/Data/List/NonEmpty/: Extra.hs
lib/hs/Data/Vector/: Extended.hs  Extra.hs
lib/scm/: grid.scm  intcode.scm  list.scm  point.scm  string.scm  table.scm
src/2017/: 01.hs  02.hs  03.hs  04.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
